fix issue with animation and overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,4 @@
 .main-content{
     padding: 1em;
+    overflow-x: hidden;
 }
