--- a/src/app/components/jaded-button/jaded-button.component.css
+++ b/src/app/components/jaded-button/jaded-button.component.css
@@ -4,7 +4,7 @@
     border: 5px solid #E09F94;
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 5em;
-    transition: all 400ms;
+    transition: all 300ms;
 }
 
 .jaded-btn:hover{
